First draft to fix typing animation spacing where it would push content down. Also created draft for mobile devices like iphone 14 promax that would fix the scaling issue as well.

--- a/src/App.css
+++ b/src/App.css
@@ -40,15 +40,6 @@ body {
 
 /* Scrollbar styles */
 
-/* Styling for Webkit browsers (Chrome, Safari, Edge) */
-.no-scrollbar::-webkit-scrollbar {
-  display: none; /* Hide scrollbar for Webkit browsers */
-}
-
-.no-scrollbar {
-  scrollbar-width: none; /* Hide scrollbar for Firefox */
-}
-
 *::-webkit-scrollbar {
   width: 10px; /* Adjust the width of the scrollbar */
 }
@@ -334,13 +325,68 @@ nav.navbar .navbar-toggler[aria-expanded='true'] .navbar-toggler-icon {
   display: inline-block;
 }
 .banner h1 {
-  font-size: 65px;
+  font-size: 45px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1;
 
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   display: block;
+  position: relative;
+}
+
+.header-container {
+  position: relative; /* Context for absolute positioning */
+}
+
+.header-with-rotation {
+  position: relative; /* Establishes a positioning context for absolutely positioned elements inside */
+  display: block;
+}
+
+.txt-rotate {
+  position: absolute;
+  top: 100%;
+  display: inline-block;
+  white-space: nowrap;
+  left: 0;
+}
+
+.wrap {
+  display: inline-block; /* Allows the span to be sized by its content */
+  line-height: normal;
+}
+
+@media (max-width: 430px) {
+  /* Mobile devices adjustment such as iphone 14 pro max */
+  .header-container {
+    margin-bottom: 12px;
+  }
+
+  .banner {
+    padding: 160px 0 50px 0; /* Reduced padding */
+  }
+
+  .banner h1 {
+    font-size: 35px; /* Smaller font size for mobile */
+    margin-bottom: 10px;
+  }
+  .txt-rotate {
+    display: block;
+    white-space: normal; /* Allows text to wrap */
+    line-height: 1.2;
+  }
+
+  .header-with-rotation {
+    line-height: 1.2;
+    margin-top: 1rem;
+  }
+}
+
+.AboutMeSection {
+  margin-top: 5rem;
+  /* border: black 5px solid; */
+  padding: 2rem;
 }
 
 .banner p {
